// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectAccountPage should render correctly 1`] = `
<Page
  className="connect-account"
  isNarrow={true}
>
  <Card
    className="connect-account__card"
  >
    <_default />
    <h2>
      <span
        key="0"
      >
        heading line 1
        <br />
      </span>
      <span
        key="1"
      >
        heading line 2
        <br />
      </span>
    </h2>
    <p
      className="connect-account__terms"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
    <hr
      className="full-width"
    />
    <p>
      <ForwardRef(Button)
        href="/wcpay-connect-url"
        isLarge={true}
        isPrimary={true}
      />
    </p>
  </Card>
</Page>
`;

exports[`ConnectAccountPage should render correctly when on-boarding disabled 1`] = `
<Page
  className="connect-account"
  isNarrow={true}
>
  <Card
    className="connect-account__card"
  >
    <_default />
    <h2>
      <span
        key="0"
      >
        heading line 1
        <br />
      </span>
      <span
        key="1"
      >
        heading line 2
        <br />
      </span>
    </h2>
    <p>
      We've temporarily paused new account creation.
      <br />
      We'll notify you when we resume!
    </p>
  </Card>
</Page>
`;
